# skelm-core

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/skelm-download/src/: http.rs  ollama.rs  utils.rs
crates/skelm-exec/: Cargo.toml
crates/skelm-exec/src/: generate.rs  lib.rs  output.rs  template.rs  toolparse.rs
crates/skelm-exec/src/orchestrator/: mod.rs  tests.rs  tools.rs
crates/skelm-exec/src/template/: mod.rs
crates/skelm-exec/src/template/jinja/: ast.rs  block.rs  grammar.lalrpop  grammar.rs  lexer.rs  mod.rs  parser.rs  position.rs  render.rs  tests.rs
crates/skelm-llama-cpp-sys/: Cargo.toml  build.rs
crates/skelm-llama-cpp/examples/: prefix_cache_test.rs  rope_coherence_test.rs
crates/skelm-llama-cpp/src/: context.rs  lib.rs  model.rs
crates/skelm-ollama/src/: run.rs  storage.rs
crates/template-jinja/: Cargo.toml
crates/template-jinja/examples/: jinja-tools.rs
crates/template-jinja/src/: ast.rs  grammar.rs  parser.rs  render.rs  tests.rs
crates/template-jinja/test-gen/: generate  generate_golden.py
crates/template-jinja/tests-files/: hello.j2  hello_1.json  hello_1.output  users.j2  users_1.json  users_1.output
skelm-cli/: Cargo.toml
skelm-cli/src/: args.rs  main.rs  run.rs
