[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Vincent Hanquez <vincent@coretype.io>"
]
repository = "https://github.com/vincenthz/skelm-core"
keywords = ["AI", "llama", "mlx", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[workspace]
members = [
    "crates/skelm-download",
    "crates/skelm-llama-cpp-sys",
    "crates/skelm-llama-cpp",
    "crates/skelm-hf",
    "crates/skelm-exec",
    "crates/skelm-ollama",
    "crates/template-jinja",
    "skelm-cli",
]

resolver = "2"

[workspace.dependencies]
skelm-download = { version = "0.1", path = "crates/skelm-download" }
skelm-exec = { version = "0.1", path = "crates/skelm-exec" }
skelm-llama-cpp-sys = { version = "0.1", path = "crates/skelm-llama-cpp-sys" }
skelm-llama-cpp = { version = "0.1", path = "crates/skelm-llama-cpp" }
skelm-ollama = { version = "0.1", path = "crates/skelm-ollama" }
template-jinja = { version = "0.1", path = "crates/template-jinja" }

#mlx-lm = { version = "0.0.1" }
#mlx-lm-utils = { version = "0.0.1" }

tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
