[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Vincent Hanquez <vincent@coretype.io>"
]
repository = "https://github.com/vincenthz/skelm-core"
keywords = ["AI", "llama", "mlx", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[workspace]
members = [
    "crates/skelm-download",
    "crates/skelm-llama-cpp-sys",
    "crates/skelm-llama-cpp",
    "crates/skelm-hf",
    "crates/skelm-exec",
    "crates/skelm-ollama",
    "skelm-cli",
]

# template-jinja is a WIP hand-written Jinja engine, disabled for now but kept
# in the tree for later use. Excluded from the build so its incomplete state
# (failing tests / warnings) doesn't affect the workspace. Re-enable by moving
# it back into `members` and restoring the dependency wiring in skelm-exec.
exclude = [
    "crates/template-jinja",
]

resolver = "2"

[workspace.dependencies]
skelm-download = { version = "0.1", path = "crates/skelm-download" }
skelm-exec = { version = "0.1", path = "crates/skelm-exec" }
skelm-llama-cpp-sys = { version = "0.1", path = "crates/skelm-llama-cpp-sys" }
skelm-llama-cpp = { version = "0.1", path = "crates/skelm-llama-cpp" }
skelm-ollama = { version = "0.1", path = "crates/skelm-ollama" }
# template-jinja disabled for now (see [workspace].exclude above)
#template-jinja = { version = "0.1", path = "crates/template-jinja" }

#mlx-lm = { version = "0.0.1" }
#mlx-lm-utils = { version = "0.0.1" }

tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
