[package]
name = "skelm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
skelm-download.workspace = true
skelm-exec.workspace = true
skelm-llama-cpp.workspace = true
skelm-ollama.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

indicatif = "0.18"
reqwest = "0.12"
url = "2"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde_json = "1"
tracing-subscriber = "0.3"
rustyline = "17"
ctrlc = "3.5"
