[package]
name = "skelm-exec"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Skelm abstraction for running language model in various mode"

[dependencies]
skelm-ollama.workspace = true
skelm-llama-cpp.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono = "*"
ctrlc = "3.5"
serde_json = "1"
minijinja = { version = "2" }
minijinja-contrib = { version = "2", features = ["pycompat"] }
smallvec = "1"
aho-corasick = "1"
logos = "0.15"
lalrpop-util = "0.22"

[build-dependencies]
lalrpop = "0.22"

#[target.'cfg(target_os = "macos")'.dependencies]
#mlx-lm = { workspace = true, optional = true }
#mlx-lm-utils = { workspace = true, optional = true }

[features]
default = ["mlx"]
#mlx = ["dep:mlx-lm", "dep:mlx-lm-utils"]
mlx = []
