[package]
name = "skelm-exec"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Skelm abstraction for running language model in various mode"

[dependencies]
skelm-ollama.workspace = true
skelm-llama-cpp.workspace = true
# template-jinja disabled for now, kept in tree for later use
#template-jinja.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono = "*"
ctrlc = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `json` enables the `tojson` filter that tool-aware chat templates rely on
minijinja = { version = "2", features = ["json"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
smallvec = "1"

[build-dependencies]
lalrpop = "0.22"

#[target.'cfg(target_os = "macos")'.dependencies]
#mlx-lm = { workspace = true, optional = true }
#mlx-lm-utils = { workspace = true, optional = true }

[features]
default = ["mlx"]
#mlx = ["dep:mlx-lm", "dep:mlx-lm-utils"]
mlx = []
