[package]
name = "skelm-llama-cpp-sys"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "skelm system wrapper for llama.cpp"

[dependencies]
link-cplusplus = "1"

[build-dependencies]
bindgen = "0.72"
cc = { version = "1.2", features = ["parallel"] }

[features]
default = []

# Metal is built automatically on Apple targets; this feature exists only to be
# explicit and is a no-op elsewhere.
metal = []

# Accelerator backends. These are currently *detection only*: enabling one makes
# build.rs auto-locate the corresponding toolkit and report it, but the backend
# is not yet compiled — the build falls back to the CPU backend. See build.rs.
cuda = []
hip = []
musa = []
sycl = []
vulkan = []
opencl = []
blas = []
